--- a/README
+++ b/README
@@ -31,6 +31,8 @@ For this problem, I am going with Sync model. But I have done lot of Async progr
 
 6. In main thread, I wait for all clients to finish their query and once we have the result we can display.
 I am not taking care of the condition if some peers are down. But I do not assume that they are up when program starts on a machine.
-So I have a retrial mechanism and that is very essential in network programming.
+So I have a re-trial mechanism and that I think is very essential in network programming.
+
+7. Also impleneted signal hadler to terminate the program.
 
 
